@@ -69,6 +69,7 @@ class JSCTestsFactory(Factory):
     def __init__(self, platform, configuration='release', architectures=None, additionalArguments=None, **kwargs):
         Factory.__init__(self, platform, configuration, architectures, False, additionalArguments)
         self.addStep(CompileJSCOnly())
+        self.addStep(RunJavaScriptCoreTests())
 
 
 class GTKFactory(Factory):
